Fix welcome layout z-index and positioning; update background icons to cybersecurity focus
- Fix z-index stacking: background (1) < portrait (5) < dialog bubble (10)
- Position dialog bubble to the right with absolute positioning
- Replace tech icons (Docker, PHP, SQL, etc.) with cybersecurity icons
- Keep only Python and JavaScript from original stack
- Add new security-focused icons: lock, shield, bug, kali

--- a/src/app/welcome/welcome-background/welcome-background.scss
+++ b/src/app/welcome/welcome-background/welcome-background.scss
@@ -2,7 +2,7 @@
     position: absolute;
     top: 150px;
     left: 5px;
-	z-index: 0;
+	z-index: 1;
 	
 	img.background {
 		width: 535px;
@@ -55,21 +55,6 @@
 		&.sixth {
 			top: -20px;
 			left: 50px;
-		}
-
-		&.seventh {
-			top: -20px;
-			right: 50px;
-		}
-
-		&.eighth {
-			bottom: 110px;
-			right: -30px;
-		}
-
-		&.ninth {
-			bottom: 40px;
-			right: 10px;
 		}
 	}
 }
