--- a/src/app/welcome/welcome.component.css
+++ b/src/app/welcome/welcome.component.css
@@ -17,7 +17,7 @@
 
 .layer_one .avatar-container .illustration {
     height: 780px;
-    z-index: 1;
+    z-index: 5;
     position: relative;
     image-rendering: high-quality;
     image-rendering: -webkit-optimize-contrast;
